--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,7 +8,7 @@ body {
 
 .dropdown-menu a {
   /* color: var(--bs-primary); */
-  color: black;
+  color: #0b2041;
 
 }
 
@@ -21,7 +21,7 @@ body {
 }
 
 .nav-link {
-  color: black;
+  /* color: black; */
 }
 
 .navbar .nav-link {
@@ -32,10 +32,6 @@ body {
 .navbar-nav .nav-link.active,
 .navbar-nav .nav-link.show {
   font-weight: bold;
-}
-
-.dropdown-menu {
-  /* border: 0px; */
 }
 
 .dropdown-item:hover {
@@ -121,6 +117,7 @@ blockquote {
   border-left: 4px solid #0b2041;
   padding-left: 12px;
   color: rgba(var(--bs-secondary-bg));
+  font-family: 'Noto Serif TC', serif;
   /* font-style: italic; */
 }
 
@@ -131,6 +128,10 @@ h4,
 h5,
 h6 {
   line-height: 200%;
+  font-weight: bold;
+}
+
+b, strong {
   font-weight: bold;
 }
 
