Update block-before class to include overflow in pages and posts layouts

--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -5,7 +5,7 @@ layout: pages
 <div class="container">
     <div class="row">
         <div class="col-md-12 col-lg-8 content" style="margin-bottom: 30px;">
-            <div class="block-before">
+            <div class="block-before overflow">
                 <div class="block">
                     {{ content }}
                 </div>
