--- a/_layouts/pages.html
+++ b/_layouts/pages.html
@@ -69,7 +69,7 @@ layout: default
     <div class="container">
         <div class="row">
             <div class="col-md-12 content">
-                <div class="block-before">
+                <div class="block-before overflow">
                     <div class="block">
                         {{ content }}
                     </div>
