Update CSS classes for block-before and content overflow

--- a/_layouts/pages_TOC.html
+++ b/_layouts/pages_TOC.html
@@ -23,7 +23,7 @@ layout: pages
                 <hr />
             </div>
         </div>
-        <div class="col-lg-9 col-md-12 content">
+        <div class="col-lg-9 col-md-12 content overflow">
             {{ content }}
         </div>        
     </div>
