Refactor HTML layout and styling***
***Update TOC layout and styling

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,7 +79,7 @@
     </div>
     <footer class="text-center bg-dark">
         <a href="#top" style="text-decoration: none;">
-            <div style="background-color: #2e322e;padding: 10px 0px 10px 0px;" id="top_href">
+            <div class="py-3" style="background-color: #2e322e;" id="top_href">
                 <span style="color: white;letter-spacing: 1em; margin-left: 1em;">TOP</span>
             </div>
         </a>
