Update welcome message in default.html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -111,7 +111,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p style="text-align: center;">歡迎使用「中華民國資訊管理學會」，<br />請輸入使用者名稱與密碼以登入。</p>
+                    <p style="text-align: center;">歡迎蒞臨「中華民國資訊管理學會」，<br />請輸入使用者名稱與密碼以登入。</p>
                     <div id="login-alert"></div>
                     <div class="input-group mb-3">
                         <span class="input-group-text">使用者名稱</span>
