Update dropdown menu link for paper search

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,7 @@
                             <a class="dropdown-item" href="https://eclab.nkust.edu.tw/submitjim/"
                                 target="_blank">資訊管理學報</a>
                             <a class="dropdown-item" href="/confernece">研究會論文集</a>
-                            <!-- <a class="dropdown-item" href="#">論文查詢</a> -->
+                            <a class="dropdown-item" href="/papers">論文查詢</a>
                         </div>
                     </li>
                     <li class="nav-item"></li>
